feat(encryption): add rest api translations
